2006-02-27  Rene Fritz  <r.fritz@colorcube.de>

	* Added possiblity to create dimmed icons by adding _i to the filename with t3lib_iconworks::skinImg().

2006-02-27  Wolfgang Klinger  <wk@plan2.net>

	* Fixed bug #549: No information about deleted records in the backend log

2006-02-26  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #1614: page type "external URL" has no https option (thanks to Marc Bastian Heinrichs)
	* Enchanced config.xmlprologue (takes new keyowrds and arbitrary string as arguments)
	* Fixed issues with config.xhtmlDoctype

2006-02-26  Karsten Dambekalns  <karsten@typo3.org>

	* Extension Manager: Fixed bug #2630 (thanks Peter Niederlag), #2610, #2607, #1904 (partly), #2579
	* Extension Manager: Fixed checking of review states (thanks Rupert Germann)
	* Extension Manager: Now the EM shows update icons again
	* Extension Manager: Dependency handling has been reworked, now it is much more comfortable, fixes #1607 (partly), #2584
	* class.t3lib_befunc.php: Fixed bug #2528
	* class.tslib_content.php: Fixed bug #2676

2006-02-26  Wolfgang Klinger  <wk@plan2.net>

	* Fixed bug #1060: Sitemap with SectionIndex does not display content header when page has a navigation title assigned
	* Fixed bug #284: substUrlsInPlainText does not allow other characters than space and () to terminate URLs in the text.
	* Fixed bug #2543: tslib_div uses deprecated function call_user_method
	* Fixed bug #1827: Empty page tree after deleting the current temporary page mount.

2006-02-25  Ingmar Schlecht  <ingmar@typo3.org>

	* Added an "upload" and "new" button to the filelist module (Gremlin #1599, thanks to Stefano Cecere for the patch)

2006-02-23  Ingmar Schlecht  <ingmar@typo3.org>
